fix: correct spelling errors and improve text clarity in multiple HTML files

--- a/docker/services/frontend/html/config-candlestick.html
+++ b/docker/services/frontend/html/config-candlestick.html
@@ -1353,7 +1353,7 @@
                 </div>
                 <p class="card-description">
                     Trainiere das Candlestick-Pattern-Erkennungsmodell. Das Training verwendet eine optimierte Auswahl
-                    von Symbolen und Timeframes fur maximale Generalisierung.
+                    von Symbolen und Timeframes für maximale Generalisierung.
                 </p>
 
                 <!-- Training Configuration Info -->
