--- a/docker/services/frontend/html/config-embedder.html
+++ b/docker/services/frontend/html/config-embedder.html
@@ -917,7 +917,7 @@ Bitcoin bearish Signal</textarea>
                     </div>
                 `;
             } catch (error) {
-                document.getElementById('cache-stats').innerHTML = '<div class="info-box">Cache-Statistiken nicht verfugbar.</div>';
+                document.getElementById('cache-stats').innerHTML = '<div class="info-box">Cache-Statistiken nicht verfügbar.</div>';
             }
         }
 
