--- a/docker/services/frontend/html/config-hmm.html
+++ b/docker/services/frontend/html/config-hmm.html
@@ -914,7 +914,7 @@
                         </div>
                     `;
                 } else {
-                    container.innerHTML = '<div class="info-box">Feature-Liste nicht verfugbar.</div>';
+                    container.innerHTML = '<div class="info-box">Feature-Liste nicht verfügbar.</div>';
                 }
             } catch (error) {
                 document.getElementById('feature-list').innerHTML = '<div class="info-box">Feature-Liste konnte nicht geladen werden.</div>';
