--- a/docker/services/frontend/html/service-embedder.html
+++ b/docker/services/frontend/html/service-embedder.html
@@ -353,9 +353,9 @@
                 und Features in hochdimensionale Vektoren zu transformieren.
             </p>
             <p>
-                Diese Embeddings werden von anderen Services wie RAG (für Dokumentensuche), TCN (fur
+                Diese Embeddings werden von anderen Services wie RAG (für Dokumentensuche), TCN (für
                 Pattern-Erkennung) und LLM (für kontextbasierte Analyse) verwendet. Durch die Zentralisierung
-                werden Ressourcen gespart und konsistente Embeddings gewahrleistet.
+                werden Ressourcen gespart und konsistente Embeddings gewährleistet.
             </p>
         </div>
 
