--- a/docker/services/frontend/html/service-nhits.html
+++ b/docker/services/frontend/html/service-nhits.html
@@ -297,9 +297,9 @@
         <div class="content-card">
             <h2>&#129504; Beschreibung</h2>
             <p>
-                Der NHITS Service ist das Herzstuck des KI Trading Model Systems. Er implementiert das
+                Der NHITS Service ist das Herzstück des KI Trading Model Systems. Er implementiert das
                 <strong>N-HiTS</strong> (Neural Hierarchical Interpolation for Time Series) Modell,
-                ein State-of-the-Art Deep Learning Modell für Zeitreihenprognosen, das speziell fur
+                ein State-of-the-Art Deep Learning Modell für Zeitreihenprognosen, das speziell für
                 Finanzmarktdaten optimiert wurde.
             </p>
             <p>
