--- a/docker/services/frontend/html/service-tcn.html
+++ b/docker/services/frontend/html/service-tcn.html
@@ -380,13 +380,13 @@
             <h2>&#129504; Beschreibung</h2>
             <p>
                 Der TCN-Pattern Service nutzt <strong>Temporal Convolutional Networks (TCN)</strong> zur
-                automatischen Erkennung von Chart-Patterns in Finanzzeitreihen. TCNs sind speziell fur
+                automatischen Erkennung von Chart-Patterns in Finanzzeitreihen. TCNs sind speziell für
                 sequentielle Daten optimiert und bieten gegenüber RNNs den Vorteil paralleler Verarbeitung
                 und stabilerem Training.
             </p>
             <p>
                 Der Service erkennt 16 verschiedene Chart-Pattern-Typen, die von Tradern weltweit zur
-                technischen Analyse verwendet werden. Die Erkennung erfolgt in Echtzeit und kann fur
+                technischen Analyse verwendet werden. Die Erkennung erfolgt in Echtzeit und kann für
                 verschiedene Zeitrahmen konfiguriert werden.
             </p>
         </div>
