--- a/docker/services/frontend/html/service-watchdog.html
+++ b/docker/services/frontend/html/service-watchdog.html
@@ -360,7 +360,7 @@
 <body>
     <header>
         <div class="container">
-            <a href="/" class="back-link">&#8592; Zuruck zum Dashboard</a>
+            <a href="/" class="back-link">&#8592; Zurück zum Dashboard</a>
             <span class="service-badge">Port 3010</span>
         </div>
     </header>
