--- a/docker/services/frontend/html/service-hmm-train.html
+++ b/docker/services/frontend/html/service-hmm-train.html
@@ -328,7 +328,7 @@
 <body>
     <header>
         <div class="container">
-            <a href="/" class="back-link">&#8592; Zuruck zum Dashboard</a>
+            <a href="/" class="back-link">&#8592; Zurück zum Dashboard</a>
             <span class="service-badge">Port 3014 | Training</span>
         </div>
     </header>
