--- a/docker/services/frontend/html/service-nhits-train.html
+++ b/docker/services/frontend/html/service-nhits-train.html
@@ -302,7 +302,7 @@
 <body>
     <header>
         <div class="container">
-            <a href="/" class="back-link">&#8592; Zuruck zum Dashboard</a>
+            <a href="/" class="back-link">&#8592; Zurück zum Dashboard</a>
             <span class="service-badge training">Port 3012 | Training</span>
         </div>
     </header>
